# repro-validator

./: .gitignore  README.md  dockerfile.py  flake.nix  main.py  mine_articles.py  publish.sh  pyproject.toml  schema.json  setup.py  test_validator.py  validator.py
inputs/: cp_bibcodes.csv  jingyud_data.csv  mp2_bibcodes.csv  old_to_new_bibcodes.csv
inputs/venues/: asplos12.yaml  asplos18.yaml  asplos24-1.yaml  asplos24-2.yaml  asplos24-3.yaml  ccs12.yaml  ccs18.yaml  ccs23.yaml  oopsla12.yaml  oopsla18.yaml  oopsla24.yaml  osdi12.yaml  osdi18.yaml  osdi24.yaml  pldi12.yaml  pldi18.yaml  pldi24.yaml  pvldb18.yaml  pvldb23.yaml  sigmod12.yaml  sigmod18.yaml  sigmod24-1.yaml  sosp11.yaml  sosp19.yaml  sosp23.yaml  taco12.yaml  taco18.yaml  taco24.yaml  tissec12.yaml  tocs12.yaml  tocs18.yaml  tocs24.yaml  tods12.yaml  tods18.yaml  tods24.yaml  toplas12.yaml  toplas18.yaml  toplas24.yaml  tops18.yaml  tops24.yaml  (+1 more)
my_data/: ChenKCKWD024.yaml
outputs/: completed_report.md  cp_report.md
repro_validator/: dockerfile.py  main.py  mine_articles.py  schema.py  util.py  validator.py
test/: mp2_input.yaml
test/FakeBibcode/: data.yaml
test/FakeBibcode2/: data.yaml
test/FakeBibcode3/: data.yaml
test_cases/: invalid_article.yaml  valid.yaml  valid2.yaml  valid_extra_resources.yaml  valid_raw_string.yaml
workflow/: Snakefile  check_cp_bibcodes.py  count_completed.py  download_dblp.py
